--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -10,7 +10,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="400dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="@color/defaultIconColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="New Budget"
-                android:textColor="#070707"
+                android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.052"
                 app:layout_constraintStart_toEndOf="@+id/cancelPlanBtn"
@@ -38,20 +38,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="6dp"
-                android:background="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
+                android:background="@color/dashboardItem"
+                android:backgroundTint="@color/dashboardItem"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
             <ImageButton
                 android:id="@+id/savePlanBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="33dp"
+                android:layout_height="35dp"
                 android:layout_marginStart="126dp"
-                android:backgroundTint="#FFFFFF"
+                android:layout_marginTop="6dp"
+                android:background="@color/green"
+                android:backgroundTint="@color/dashboardItem"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.962"
+                app:layout_constraintHorizontal_bias="0.859"
                 app:layout_constraintStart_toEndOf="@+id/textView12"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/baseline_done_24" />
@@ -61,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="32dp"
                 android:text="Name"
                 android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +76,7 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="text"
-                android:textColor="#000000"
+                android:textColor="#090909"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.08"
                 app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +103,7 @@
                 android:ems="10"
                 android:hint="Amount"
                 android:inputType="number"
-                android:textColor="#000000"
+                android:textColor="#0E0E0E"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.075"
                 app:layout_constraintStart_toStartOf="parent"
@@ -114,6 +116,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:entries="@array/category"
+                android:spinnerItemStyle="@style/Widget.AppCompat.DropDownItem.Spinner"
                 android:textColor="#FFFFFF"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -125,7 +128,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:text="Category"
-                android:textColor="#0E0E0E"
+                android:textColor="#000000"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/budgetname" />
 
