--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -6,16 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".Insights">
 
-    <include
-        layout="@layout/appbar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<!--    <include-->
+<!--        layout="@layout/appbar_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteY="100dp">
+        android:backgroundTint="@color/cardview_shadow_start_color"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
     </androidx.viewpager2.widget.ViewPager2>
 
@@ -23,6 +25,8 @@
         android:id="@+id/tab_layout_Home"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/cardview_shadow_start_color"
+        app:tabTextColor="#FFFDFD"
         tools:layout_editor_absoluteY="55dp">
 
 
@@ -42,16 +46,6 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-    <!--        android:id="@+id/bottomNavBar"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:background="#000000"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:menu="@menu/nav_bar"-->
-    <!--        />-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
